--- a/Bugs in Samples/wwwroot/index.html
+++ b/Bugs in Samples/wwwroot/index.html
@@ -7,13 +7,13 @@
     <title>Bugs in Samples</title>
     <base href="/" />
     <!-- <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" /> -->
-    <link href="_content/IgniteUI.Blazor/themes/dark/bootstrap.css" rel="stylesheet" />
-    <link href="_content/IgniteUI.Blazor/themes/grid/dark/bootstrap.css" rel="stylesheet" />
+    <link href="_content/IgniteUI.Blazor/themes/dark/material.css" rel="stylesheet" />
+    <link href="_content/IgniteUI.Blazor/themes/grid/dark/material.css" rel="stylesheet" />
     <link href="css/ig-theme.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Bugs in Samples.styles.css" rel="stylesheet" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet preload prefetch" as="style">
 </head>
 
